// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuildSidebar Should render with data 1`] = `
.c13 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c13:focus,
.c13:hover,
.c13:visited,
.c13:link,
.c13:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c5 {
  font-family: 'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  font-size: 14px;
  line-height: 1.25;
  color: #fff;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0.5rem;
}

.c9 {
  font-family: 'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
}

.c1 {
  color: #fff;
}

.c2 {
  border-bottom: 1px solid #303338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 10px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c8 {
  height: 3rem;
  width: 3rem;
}

.c10 {
  margin-left: 4px;
  line-height: 1;
}

.c3 {
  margin-bottom: 0.5rem;
}

.c12 {
  margin: 0;
  padding: 1rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 {
  padding: 0.8rem 1rem;
  color: #A1A6B0;
}

.c14:hover {
  border-bottom: 2px solid #303338;
}

.c14:active {
  border-bottom: 2px solid #303338;
}

@media only screen and (min-width:768px) {
  .c1 {
    margin-right: 1rem;
    border: 1px solid #303338;
    border-radius: 10px;
  }
}

@media only screen and (min-width:768px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (min-width:768px) {
  .c12 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (min-width:768px) {
  .c14 {
    border-left: 2px solid transparent;
  }
}

@media only screen and (min-width:768px) {
  .c14:hover {
    border-left: 2px solid #303338;
    border-bottom: initial;
  }
}

@media only screen and (min-width:768px) {
  .c14:active {
    border-left: 2px solid #fff;
    border-bottom: initial;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="sidebar"
  >
    <div
      class="c0 c2"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4"
        >
          <svg
            fill="currentColor"
            height="26"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="26"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.67 13.13C18.04 14.06 19 15.32 19 17v3h4v-3c0-2.18-3.57-3.47-6.33-3.87zM15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4c-.47 0-.91.1-1.33.24a5.98 5.98 0 010 7.52c.42.14.86.24 1.33.24zM9 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0-6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zM9 13c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4zm6 5H3v-.99C3.2 16.29 6.3 15 9 15s5.8 1.29 6 2v1z"
            />
          </svg>
          <span
            class="c5"
          >
            10
          </span>
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <img
            alt="Test Guild"
            class="c8"
            src="dxdao-icon.svg"
          />
          <h1
            class="c9 c10"
            size="2"
          >
            Test Guild
          </h1>
        </div>
      </div>
      <div>
        Test
      </div>
    </div>
    <div
      class="c0 c11 c12"
    >
      <a
        class="c13"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2"
      >
        <div
          class="c14"
        >
          governance
        </div>
      </a>
      <a
        class="c13"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2/all-proposals"
      >
        <div
          class="c14"
        >
          allProposals
        </div>
      </a>
      <div
        class="c14"
      >
        settings
      </div>
    </div>
  </div>
   
</div>
`;

exports[`GuildSidebar Should render without data 1`] = `
.c11 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c11:focus,
.c11:hover,
.c11:visited,
.c11:link,
.c11:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0.5rem;
}

.c7 {
  font-family: 'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
}

.c1 {
  color: #fff;
}

.c2 {
  border-bottom: 1px solid #303338;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 10px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 3rem;
  width: 3rem;
}

.c8 {
  margin-left: 4px;
  line-height: 1;
}

.c3 {
  margin-bottom: 0.5rem;
}

.c10 {
  margin: 0;
  padding: 1rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  padding: 0.8rem 1rem;
  color: #A1A6B0;
}

.c12:hover {
  border-bottom: 2px solid #303338;
}

.c12:active {
  border-bottom: 2px solid #303338;
}

@media only screen and (min-width:768px) {
  .c1 {
    margin-right: 1rem;
    border: 1px solid #303338;
    border-radius: 10px;
  }
}

@media only screen and (min-width:768px) {
  .c5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (min-width:768px) {
  .c10 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (min-width:768px) {
  .c12 {
    border-left: 2px solid transparent;
  }
}

@media only screen and (min-width:768px) {
  .c12:hover {
    border-left: 2px solid #303338;
    border-bottom: initial;
  }
}

@media only screen and (min-width:768px) {
  .c12:active {
    border-left: 2px solid #fff;
    border-bottom: initial;
  }
}

<div>
   
  <div
    class="c0 c1"
    data-testid="sidebar"
  >
    <div
      class="c0 c2"
    >
      <div
        class="c0 c3"
      >
        <div
          class=""
        >
          <span
            aria-busy="true"
            aria-live="polite"
          >
            <span
              class="react-loading-skeleton"
              style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <img
            class="c6"
            src="dxdao-icon.svg"
          />
          <h1
            class="c7 c8"
            size="2"
          >
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </h1>
        </div>
      </div>
    </div>
    <div
      class="c0 c9 c10"
    >
      <a
        class="c11"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2"
      >
        <div
          class="c12"
        >
          governance
        </div>
      </a>
      <a
        class="c11"
        href="/localhost/0xE9bDaB08f2FBb370d2a6F6661a92d9B6157E9fd2/all-proposals"
      >
        <div
          class="c12"
        >
          allProposals
        </div>
      </a>
      <div
        class="c12"
      >
        settings
      </div>
    </div>
  </div>
   
</div>
`;
